--- a/output.ejs
+++ b/output.ejs
@@ -8,7 +8,7 @@
 </html>
 <body>
     <div class='container'>
-        <h4 style="text-align:center;"> The Encrypted Code of teh file u entered earlier is below. Just copy it and save in ay file with .txt extension which would be later used to decode</h4>
+        <h4 style="text-align:center;"> The Encrypted Code of the file u entered earlier is below. Just copy it and save in ay file with .txt extension which would be later used to decode</h4>
         <p style="margin-left:10%; margin-right:10%; text-align:justify;"><%= a %> </p>
     </div>
 </body>
