--- a/output.ejs
+++ b/output.ejs
@@ -9,6 +9,8 @@
 <body>
     <div class='container'>
         <h4 style="text-align:center;"> The Encrypted Code of the file u entered earlier is below. Just copy it and save in ay file with .txt extension which would be later used to decode</h4>
-        <p style="margin-left:10%; margin-right:10%; text-align:justify;"><%= a %> </p>
+        <p style="margin-left=10%; margin-right=10%;"><%= uff %> </p>
+        <br/>
+
     </div>
 </body>
